--- a/app/views/plan.html
+++ b/app/views/plan.html
@@ -27,7 +27,8 @@
             </h2>
             <div class="row">
                 <div ng-repeat="theme in themes.results" class="col-sm-3 col-no-pad goal-box">
-                    <a class="goal-box-container" ng-href="/themes/{{ theme.id }}/{{ theme.slug }}">
+                    <a class="goal-box-container"   style="background: {{ theme.extras.color_primary }}"
+                            ng-href="/themes/{{ theme.id }}/{{ theme.slug }}">
                         <div class="goal-box-body">
                             <h1 class="text-transparent text-center" ng-if="theme.code">
                                 <strong>{{ theme.code }}</strong>
